test/fail_compilation/imports/test64b.d
module imports.test64b;

const char[] file2 = "File2";

